src/Components/BackgroundAudio/BackgroundAudio.css
.audio-container {
    position: absolute;
    display: flex;
    flex-direction: column;
    width: 3rem;
    height: 12rem;
    padding: 1rem;
    top:25px;
    right: 366px;
}
.audio {
    width: 3.5rem;
    height: 3.5rem;
    background-image: url("../../assets/img/i-audio-on.png");
    background-repeat: no-repeat;
    background-size: cover;
    align-self: end;
    cursor: pointer;
}
.volume {
    width: 3.3rem;
    height: 4.5rem;
    transition: opacity 0.3s ease-in-out;
    pointer-events: auto;
    transform: rotate(180deg);
    writing-mode: vertical-rl;
    top: 80px;
    align-self: end;
    cursor: pointer;
}
.display {
    position: absolute;
    top: 45px;
    right: 436px;
    width: 2.5rem;
    height: 2.7rem;
    background-image: url("../../assets/img/display.png");
    background-repeat: no-repeat;
    background-size: cover;
    align-self: end;
    cursor: pointer;
}

